# zoreza-corte-semanal

./: .dockerignore  .gitignore  CAMBIOS_V2.md  CONFIGURAR_TURSO_STREAMLIT.md  CORRECCION_PERSISTENCIA.md  DEMO_SETUP.md  DEPLOYMENT.md  Dockerfile  GITHUB_SETUP.md  GUIA_PRUEBAS.md  LICENSE  MANUAL_ADMIN.md  MANUAL_OPERADOR.md  MEJORAS_IMPLEMENTADAS.md  MIGRACION_V2.md  NUEVAS_FUNCIONALIDADES.md  OPTIMIZACIONES_PERFORMANCE.md  RAILWAY_DEPLOYMENT.md  README.md  SISTEMA_SINCRONIZACION.md  TURSO_ADMIN_GUIA.md  TURSO_SETUP.md  app.py  check_turso_tables.py  create_admin_user.py  debug_login.py  debug_turso_response.py  pyproject.toml  railway.json  requirements.txt  reset_admin_password.py  test_turso_persistence.py  test_update_persistence.py  turso_admin.py
zoreza-pro/backend/: .env.example  alembic.ini  nohup.out  pyproject.toml  requirements.txt
zoreza-pro/backend/app/: __init__.py  main.py  seed.py
zoreza-pro/backend/app/api/: __init__.py
zoreza-pro/backend/app/core/: __init__.py  config.py  deps.py  security.py  tenant_middleware.py
zoreza-pro/backend/app/db/: __init__.py  base.py  master_base.py  master_session.py  session.py  tenant_session.py
zoreza-pro/backend/app/models/: __init__.py  app_release.py  audit_log.py  catalogs.py  cliente.py  config.py  corte.py  corte_detalle.py  gasto.py  maquina.py  maquina_ruta.py  notification.py  ruta.py  tenant.py  usuario.py  usuario_ruta.py  webauthn_credential.py
zoreza-pro/backend/app/schemas/: __init__.py  auth.py  catalog.py  (+11 more)
zoreza-pro/backend/migrations/: env.py
zoreza-pro/backend/tests/: test_basic.py
(+134 files in other folders)
